Fix the CSS that breaks the centering of the overview date-picker

--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -46,8 +46,13 @@
   margin: auto;
 
   @media (max-width: 380px) {
-    margin-left: -10px;
-    margin-right: -10px;
+    & > button:not(.left) {
+      margin-left: -8px;
+    }
+
+    & > button.left {
+      margin-right: -13px;
+    }
   }
 }
 
